layout issues

--- a/classifier/static/css/style.css
+++ b/classifier/static/css/style.css
@@ -49,9 +49,9 @@ h1 {
 	font-family: Copperplate, "Copperplate Gothic Light", fantasy;
 }
 
-.top {
+/*.top {
   padding-top: 40px;
-}
+}*/
 
 .login_button{
   padding-top: 30px;
@@ -63,20 +63,19 @@ h1 {
 }
 
 
-/*.card {
+.card {
   margin-top: 40px;
   padding: 20px 20px 20px 20px;
-  border-width: 0px;
-  background-color: #EEF;
-  height: 100%;
-}*/
-
+  border-width: 5px;
+  background-color: white;
+}
 
 
 .list-group .list-group-flush {
   border-color: #4D4D4D;
   background-color: #ECEEEF;
 }
+
 .card .card_category {
   border-color: #4D4D4D;
   padding: 0px 0px 0px 0px;
@@ -86,20 +85,9 @@ h1 {
   text-align: center;
 }
 
-/*.card-columns {
-  @include-media-breakpoint-only(xl) {
-    column-count: 4;
-  }
-  @include media-breakpoint-only(lg) {
-    column-count: 4;
-  }
-  @include media-breakpoint-only(md) {
-    column-count: 2;
-  }
-  @include media-breakpoint-only(sm) {
-    column-count: 1;
-  }
-}*/
+.card-block {
+  padding-top: 1em;
+}
 
 #sample-input-box {
   width = 100%;
@@ -161,6 +149,7 @@ input {
     color: black;
     text-decoration: none;
     display: block;
+    position: relative;
 }
 
 .dropdown-content li:hover {background-color: #f1f1f1}
